--- a/clinic_appointment_booking/views/website_templates.xml
+++ b/clinic_appointment_booking/views/website_templates.xml
@@ -132,7 +132,9 @@
                                                            class="form-control" required="1"
                                                            t-att-min="min_date"/>
                                                 </div>
-                                                <small class="text-muted">Lịch hẹn chỉ có thể được đặt từ ngày mai trở đi</small>
+                                                <small class="text-muted">Lịch hẹn chỉ có thể được đặt từ ngày mai trở
+                                                    đi
+                                                </small>
                                             </div>
                                             <div class="form-group mb-3">
                                                 <label for="appointment_time" class="form-label">Giờ hẹn
@@ -218,7 +220,9 @@
                                         <ul>
                                             <li>Vui lòng đến trước giờ hẹn 15 phút để làm thủ tục</li>
                                             <li>Lịch hẹn chỉ có thể được đặt từ ngày mai trở đi</li>
-                                            <li>Mỗi bác sĩ hoặc phòng khám chỉ có thể phục vụ một lịch hẹn trong khoảng thời gian ±1 giờ</li>
+                                            <li>Mỗi bác sĩ hoặc phòng khám chỉ có thể phục vụ một lịch hẹn trong khoảng
+                                                thời gian ±1 giờ
+                                            </li>
                                         </ul>
                                     </div>
 
@@ -357,7 +361,12 @@
                 var appointment_time = $('#appointment_time').val();
                 var room_id = $('#room_id').val();
 
-                $('#availability_result').html('<div class="text-center"><i class="fa fa-spinner fa-spin"></i> Đang kiểm tra...</div>');
+                $('#availability_result').html('
+                <div class="text-center">
+                    <i class="fa fa-spinner fa-spin"></i>
+                    Đang kiểm tra...
+                </div>
+                ');
 
                 $.ajax({
                 url: '/appointment/check_availability',
@@ -378,17 +387,26 @@
                 if (data.result) {
                 var result = data.result;
                 if (result.status === 'success') {
-                $('#availability_result').html('<div class="alert alert-success">' +
-                '<i class="fa fa-check-circle mr-2"></i>' + result.message + '</div>');
+                $('#availability_result').html('
+                <div class="alert alert-success">' +
+                    '<i class="fa fa-check-circle mr-2"></i>' + result.message + '
+                </div>
+                ');
                 } else {
-                $('#availability_result').html('<div class="alert alert-danger">' +
-                '<i class="fa fa-exclamation-circle mr-2"></i>' + result.message + '</div>');
+                $('#availability_result').html('
+                <div class="alert alert-danger">' +
+                    '<i class="fa fa-exclamation-circle mr-2"></i>' + result.message + '
+                </div>
+                ');
                 }
                 }
                 },
                 error: function() {
-                $('#availability_result').html('<div class="alert alert-danger">' +
-                '<i class="fa fa-exclamation-circle mr-2"></i>Đã xảy ra lỗi khi kiểm tra. Vui lòng thử lại.</div>');
+                $('#availability_result').html('
+                <div class="alert alert-danger">' +
+                    '<i class="fa fa-exclamation-circle mr-2"></i>Đã xảy ra lỗi khi kiểm tra. Vui lòng thử lại.
+                </div>
+                ');
                 }
                 });
                 });
